--- a/ACES-Client/package.json
+++ b/ACES-Client/package.json
@@ -19,6 +19,9 @@
     "@angular/platform-browser": "~9.1.1",
     "@angular/platform-browser-dynamic": "~9.1.1",
     "@angular/router": "~9.1.1",
+    "devextreme": "latest",
+    "devextreme-angular": "latest",
+    "devextreme-schematics": "^1.1.13",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
@@ -32,6 +35,8 @@
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "codelyzer": "^5.1.2",
+    "devextreme-cli": "latest",
+    "devextreme-themebuilder": "latest",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.4.1",
